docs: add note about JDK requirements
We need virtual threads